[project]
name = "cicflowmeter"
version = "0.3.0"
description = "CICFlowMeter Python Implementation"
authors = [
{name="Hieu Le", email="<hieulw99@gmail.com>"}
]
readme = "README.md"
license = "MIT"
repository = "https://github.com/hieulw/cicflowmeter"
packages = [
    { include = "cicflowmeter", from = "src" },
]
requires-python = ">=3.11,<4"
dependencies = [
    "requests (>=2.23.0)",
    "numpy (>=2.2.2)",
    "scipy (>=1.15.1)",
    "scapy (>=2.5.1)"
]

[tool.poetry.scripts]
cicflowmeter = 'cicflowmeter.sniffer:main'



[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
